# ypbind-mt

./: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.cache  config.guess  config.h  config.h.in  config.status  config.sub  configure  configure.ac  configure.in  depcomp  missing  mkinstalldirs  ypbind-mt.spec
etc/: .cvsignore  sysconfig.ypbind  yp.conf  ypbind.init
intl/: Makefile
lib/: Makefile  Makefile.am  Makefile.in  clnt_udp.c  dns_hosts.c  host2ypbind3_binding.c  res_options.h  ypbind3_binding.h  ypbind3_binding_dup.c  ypbind3_binding_free.c
m4/: ChangeLog  Makefile.in
man/: .cvsignore  Makefile  Makefile.am  Makefile.in  sedscript  yp.conf.5  yp.conf.5.in  yp.conf.5.xml  ypbind.8  ypbind.8.in  ypbind.8.xml
po/: ChangeLog  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  cat-id-tbl.c  de.gmo  de.po  sv.gmo  sv.po  ypbind-mt.pot
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  local.h  log_msg.c  log_msg.h  pthread_np.c  pthread_np.h  serv_list.c  ypbind  ypbind-mt.c  ypbind.h  ypbind.x  ypbind_dbus_nm.c  ypbind_server.c  ypbind_slp.c  ypbind_svc.c  ypbind_xdr.c
