#
# Copyright (c) 1998, 1999, 2001, 2002, 2004 Thorsten Kukuk, Germany
#
# Author: Thorsten Kukuk <kukuk@suse.de>
#
AUTOMAKE_OPTIONS = 1.6 gnits dist-bzip2
MAINT_CHARSET = latin1
#
SUBDIRS = m4 lib src man po

CLEANFILES = *~

EXTRA_DIST = config.rpath  ChangeLog README etc/yp.conf etc/ypbind.init

ACLOCAL_AMFLAGS = -I m4
