#
# Copyright (c) 1998-2018 Thorsten Kukuk, Germany
#
# Author: Thorsten Kukuk <kukuk@suse.de>
#
AUTOMAKE_OPTIONS = 1.6 gnits dist-xz
#
SUBDIRS = lib src man po

CLEANFILES = *~

M4_FILES = 

EXTRA_DIST = config.rpath  ChangeLog etc/yp.conf etc/ypbind.init \
	etc/sysconfig.ypbind $(M4_FILES)

ACLOCAL_AMFLAGS = -I m4
